<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.spirit</groupId>
	<artifactId>translate-service</artifactId>
	<version>1.0.0</version>
	<name>translate-service</name>
	<packaging>pom</packaging>
	<description>Demo project for Spring Boot</description>

	<modules>
		<module>api-server</module>
		<module>config-server</module>
		<module>eureka</module>
		<module>schedualer</module>
		<module>translate</module>
		<module>common</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<spring-boot.version>2.1.6.RELEASE</spring-boot.version>
		<spring-boot.web.version>2.1.6.RELEASE</spring-boot.web.version>
		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
		<spring-framework.version>5.1.0</spring-framework.version>
		<spring-data.version>3.1.0.RELEASE</spring-data.version>
		<spring-sleuth.version>2.0.1.RELEASE</spring-sleuth.version>
		<alibaba-ons-client.version>1.7.8.Final</alibaba-ons-client.version>
		<!--<alibaba-druid-spring-boot-starter.version>1.1.10</alibaba-druid-spring-boot-starter.version> -->
		<alibaba-fastjson.version>1.2.58</alibaba-fastjson.version>
		<aliyun-sdk-oss.version>3.3.0</aliyun-sdk-oss.version>
		<lombok.version>1.18.6</lombok.version>
		<mysql-connector-java.version>8.0.15</mysql-connector-java.version>
		<commons.beanutils.version>1.8.3</commons.beanutils.version>
		<commons.io.version>2.4</commons.io.version>
		<commons.codec.version>1.6</commons.codec.version>
		<commons-fileupload.version>1.3.1</commons-fileupload.version>
		<commons-lang3.version>3.9</commons-lang3.version>
		<maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-sleuth</artifactId>
				<version>${spring-sleuth.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>com.aliyun.openservices</groupId>
				<artifactId>ons-client</artifactId>
				<version>${alibaba-ons-client.version}</version>
			</dependency>
			<dependency>
				<groupId>com.aliyun.oss</groupId>
				<artifactId>aliyun-sdk-oss</artifactId>
				<version>${aliyun-sdk-oss.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql-connector-java.version}</version>
			</dependency>

			<!-- Apache commons。 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons.beanutils.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${alibaba-fastjson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>${spring-boot.web.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
				<configuration>
					<!--指定生成.exec文件的存放位置-->
					<destFile>${sonar.jacoco.reportPath}</destFile>
					<!--Jacoco是根据.exec文件生成最终的报告，所以需指定.exec的存放路径-->
					<dataFile>${sonar.jacoco.reportPath}</dataFile>
					<append>true</append>
				</configuration>
				<executions>
					<execution>
						<id>jacoco-initialize</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-site</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>


